Fixed icon spacing on files table.

--- a/loggerhead/static/css/global.css
+++ b/loggerhead/static/css/global.css
@@ -215,7 +215,7 @@ th.revisionnumber {
     }
 th.expandcell,
 td.expcell {
-    width: 28px;
+    width: 10px;
     }
 td.icocell {
     width: 18px;
